Fixed issue with A* graph plotting

--- a/plots.ipynb
+++ b/plots.ipynb
@@ -222,6 +222,37 @@
     " \"nbformat_minor\": 2\n",
     "}\n"
    ]
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-23T02:06:18.052567Z",
+     "start_time": "2025-04-23T02:06:18.051093Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-23T02:06:19.447863Z",
+     "start_time": "2025-04-23T02:06:19.445244Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": ""
   }
  ],
  "metadata": {
